1) Created restaurant model 2) Updated restaurants.index.html.erb to pass tests

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,10 @@
-Restaurant listings: There are currently no listings available
+<% unless @restaurants.empty? %>
+  <% @restaurants.each do |restaurant|%>
+  <%= restaurant.name %>
+  <% end %>
+<% else  %>
+  Restaurant listings: There are currently no listings available
+<% end %>
+
+
 <a href='#'>Add a restaurant</a>
