--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,14 @@
 <% unless @restaurants.empty? %>
+  <ul>
   <% @restaurants.each do |restaurant|%>
-  <%= restaurant.name %>
+    <li>
+      <%= restaurant.name + ", "%>
+      Rating: <%= restaurant.rating %>
+    </li>
   <% end %>
+</ul>
 <% else  %>
   Restaurant listings: There are currently no listings available
 <% end %>
 
-
-<a href='#'>Add a restaurant</a>
+<%= link_to('Add a restaurant', restaurants_new_path)%>
