1) Created Profile page for restaurants 2) Created failing test for edit functionality

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,8 +2,9 @@
   <ul>
   <% @restaurants.each do |restaurant|%>
     <li>
-      <%= restaurant.name + ", "%>
-      Rating: <%= restaurant.rating %>
+
+      <%= link_to(restaurant.name, restaurant_path(restaurant))%>
+      Rating: <%= restaurant.rating %> </a>
     </li>
   <% end %>
 </ul>
