added update functionality and failing test for deleting restaurants

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,12 +4,12 @@
     <li>
 
       <%= link_to(restaurant.name, restaurant_path(restaurant))%>
-      Rating: <%= restaurant.rating %> </a>
-    </li>
+      </br>
+      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>    </li>
   <% end %>
 </ul>
 <% else  %>
   Restaurant listings: There are currently no listings available
 <% end %>
 
-<%= link_to('Add a restaurant', restaurants_new_path)%>
+<%= link_to('Add a restaurant', new_restaurant_path)%>
