8 - Create a restaurant - test, form on view, code on controller.

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,4 +6,9 @@
   <h1>No restaurants yet</h1>
 <% end %>
 
-<a href="#">Add a restaurant</a>
+<!-- <a href="#">Add a restaurant</a> -->
+
+<a href="/restaurants/new">Add a restaurant</a>
+
+<!--  link_to "Add a restaurant", restaurants/new %> -->
+<!-- new_restaurant GET    /restaurants/new(.:format)      restaurants#new -->
