--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,7 +5,9 @@
 
       <%= link_to(restaurant.name, restaurant_path(restaurant))%>
       </br>
-      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>    </li>
+      <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+      <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>    
+    </li>
   <% end %>
 </ul>
 <% else  %>
