--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,10 @@
   <% @restaurants.each do |restaurant| %>
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
     <p><%= restaurant.description %></p>
+    <% restaurant.reviews.each do |review| %>
+      <p><b>Rating: <%= review.rating %> </b> <%= review.thoughts %></p>
+    <% end %>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
   <% end %>
