--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,14 @@
 <h1> <%= @restaurant.name %> </h1>
 <h3> Description </h3>
 <p> <%= @restaurant.description %> </p>
+<h3> Reviews </h3>
+<!-- <h4> Overall rating: </h4> -->
+
+<ul>
+  <% @reviews.each do |review| %>
+    <li>
+      <%= review.thoughts %></br>
+      Rating: <%= review.rating %>
+    </li>
+  <% end %>
+</ul>
