--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,8 @@
 <% if  @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <p><b><%= link_to restaurant.name, restaurant_path(restaurant) %></b>
-    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></p>
+    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete%></p>
 
   <% end %>
 <% else %>
