12 - Test and functionality to add reviews

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,13 @@
 <% if  @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
-    <p><b><%= link_to restaurant.name, restaurant_path(restaurant) %></b>
+    <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+    <h3><%= restaurant.description %></h3>
+    <% restaurant.reviews.each do |review| %>
+      <p><%= review.thoughts %> <%= review.rating %></p>
+    <% end %>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete%></p>
+    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete%>
 
   <% end %>
 <% else %>
@@ -10,8 +15,8 @@
 <% end %>
 
 <!-- <a href="#">Add a restaurant</a> -->
-
-<a href="/restaurants/new">Add a restaurant</a>
+<br>
+<p><a href="/restaurants/new">Add a restaurant</a></p>
 
 <!--  link_to "Add a restaurant", restaurants/new %> -->
 <!-- new_restaurant GET    /restaurants/new(.:format)      restaurants#new -->
