--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,7 +3,7 @@
   <% @restaurants.each do |restaurant|%>
     <li>
 
-      <%= link_to(restaurant.name, restaurant_path(restaurant))%>
+      <h2><%= link_to(restaurant.name, restaurant_path(restaurant))%></h2>
       </br>
       <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
       <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
