--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,11 @@
 
   <% @restaurants.each do |restaurant| %>
 
-    <h2><%= restaurant.name %></h2>
+    <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+    <h4><%= restaurant.description %></h4>
+
+    <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
+    <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
 
   <% end %>
 
@@ -12,4 +16,4 @@
 
 <% end %>
 
-<a href="#">Add a restaurant</a>
+<%= link_to "Add a restaurant", controller: "restaurants", action: "new" %>
