--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,10 +4,17 @@
 
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
     <h4><%= restaurant.description %></h4>
-
+    <ul>
+      <% restaurant.reviews.each do |review |%>
+        <li><%= review.thoughts %></li>
+        <li><%= review.rating %></li>
+      <% end %>
+    </ul>
     <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
     <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+    <h4><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></h4>
 
+    _____________________________________________________
   <% end %>
 
 <% else %>
