--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Sign in", new_user_session_path %>
       <%= link_to "Sign up", new_user_registration_path %>
     <% else %>
-      <%= link_to "Sign out", destroy_user_session_path, method: :destroy %>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
     <% end %>
 
 
