--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <% if !user_signed_in? %>
+      <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
       <%= link_to "Sign in", new_user_session_path %>
       <%= link_to "Sign up", new_user_registration_path %>
     <% else %>
