--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -14,5 +14,6 @@
   <%= f.text_field :name %>
   <%= f.label :description %>
   <%= f.text_field :description %>
+  <%= f.hidden_field :user_id, :value => current_user.id%>
   <%= f.submit %>
 <% end %>
