--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,5 +3,7 @@
   <%= f.text_area :thoughts %>
   <%= f.label :rating %>
   <%= f.select :rating, (1..5) %>
+  <%= f.hidden_field :user_id, :value => current_user.id%>
+  <%= f.hidden_field :restaurant_id, :value => @restaurant.id%>
   <%= f.submit 'Leave Review' %>
 <% end %>
