--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,7 @@
   <% @restaurants.each do |restaurant| %>
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
     <h3><%= restaurant.description %></h3>
-    <h3>Average rating: <%=restaurant.average_rating.to_f %></h3>
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <% restaurant.reviews.each do |review| %>
       <p><%= review.thoughts %> <%= review.rating %></p>
     <% end %>
