--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -12,10 +12,10 @@
     </ul>
     <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
     <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
-    <% if !current_user.has_reviewed? restaurant %>
+    <% if (!current_user.nil?) && (!current_user.has_reviewed? restaurant) %>
     <h4><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></h4>
-    <% end %>
     _____________________________________________________
+  <% end %>
   <% end %>
 
 <% else %>
