--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,8 +5,11 @@
     <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <% restaurant.reviews.each do |review| %>
       <p><%= review.thoughts %> <%= review.rating %></p>
-      <p><%= link_to "Endorse Review", review_endorsements_path(review), method: :post %></p>
-      <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
+      <p>
+        <%= link_to "Endorse Review", review_endorsements_path(review), class: "endorsements-link" %>
+        <span class='endorsements_count'><%= review.endorsements.count %> </span>
+        <span class="endorsements_span"><%= 'endorsment'.pluralize(review.endorsements.count) %></span>
+      </p>
     <% end %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     <% if restaurant.belongs_to?(current_user) %>
