--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,6 +4,7 @@
 
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
     <h4><%= restaurant.description %></h4>
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <ul>
       <% restaurant.reviews.each do |review |%>
         <li><%= review.thoughts %></li>
@@ -14,8 +15,8 @@
     <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
     <% if (!current_user.nil?) && (!current_user.has_reviewed? restaurant) %>
     <h4><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></h4>
-    _____________________________________________________
   <% end %>
+  _____________________________________________________
   <% end %>
 
 <% else %>
