--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -9,6 +9,8 @@
       <% restaurant.reviews.each do |review |%>
         <li><%= review.thoughts %></li>
         <li><%= review.rating %></li>
+        <%= link_to "Endorse Review", review_endorsements_path(review), method: :post %>
+        <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
       <% end %>
     </ul>
     <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
@@ -16,7 +18,6 @@
     <% if (!current_user.nil?) && (!current_user.has_reviewed? restaurant) %>
     <h4><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %></h4>
   <% end %>
-  _____________________________________________________
   <% end %>
 
 <% else %>
