--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,9 +8,12 @@
     <ul>
       <% restaurant.reviews.each do |review |%>
         <li><%= review.thoughts %></li>
-        <li><%= review.rating %></li>
-        <%= link_to "Endorse Review", review_endorsements_path(review), method: :post %>
-        <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
+        <li><%= review.rating %>
+          <br />
+          <%= link_to "Endorse Review", review_endorsements_path(review), class: 'endorsements-link' %>
+          <span class="endorsements_count"><%= review.endorsements.count %> </span>
+          <span class="endorsements_word"><%= 'endorsement'.pluralize(review.endorsements.count) %></span>
+        </li>
       <% end %>
     </ul>
     <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
