--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -9,10 +9,11 @@
   </section>
 <% end %>
 
-<%= form_for @restaurant do |f| %>
+<%= form_for @restaurant, html: {multipart: true} do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :description %>
   <%= f.text_field :description %>
+  <%= f.file_field :image %>
   <%= f.submit %>
 <% end %>
