--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <% if @restaurants.any? %>
 
   <% @restaurants.each do |restaurant| %>
-
+    <%= image_tag restaurant.image.url(:medium) %>
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
     <h4><%= restaurant.description %></h4>
     <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
